<resources>
    <string name="app_name">Grisaceo</string>
    <string name="content_description">image</string>

    <!-- LOADING -->
    <string name="loading_text">Un momento</string>

    <!-- ERROR -->
    <string name="error_title">Ha ocurrido un problema</string>
    <string name="error_description">Inténtalo de nuevo más tarde</string>
    <string name="error_btn">Aceptar</string>

    <!-- NETWORK ERROR -->
    <string name="nw_error_title">Ha ocurrido un problema</string>
    <string name="nw_error_description">Parece que no tienes conexión a internet</string>
    <string name="nw_error_btn_retry">Reintentar</string>
    <string name="nw_error_btn_close">Cerrar Grisaceo</string>

    <!-- Buttons -->
    <string name="btn_home">Inicio</string>
    <string name="btn_tshirts">Camisetas</string>
    <string name="btn_complements">Accesorios</string>
    <string name="btn_designs">Diseños</string>

    <!-- URLs -->
    <string name="url_main">https://grisaceo.company.site/</string>
    <string name="url_tshirts">https://grisaceo.company.site/products/Camisetas-c163266532</string>
    <string name="url_complements">https://grisaceo.company.site/products/Accesorios-c163017296</string>
    <string name="url_designs">https://grisaceo.company.site/products/Por-disenos-c163100761</string>
</resources>